--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Artists#show</h1>
 <p>Find me in app/views/artists/show.html.erb</p>
+
+<p>Name: <%= @artist.username %></p>
+<p>Address: <%= @artist.street , @artist.zipcode , @artist.city , @artist.country  %></p>
+
