--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,8 +25,8 @@
         <td><%= product.name %></td>
         <td><%= product.format %></td>
         <td><%= product.artist_id %></td>
-        <td><%= product.product_price %></td>
-        <td><%= product.delivery_price %></td>
+        <td><%= humanized_money_with_symbol(product.product_price) %></td>
+        <td><%= humanized_money_with_symbol(product.delivery_price) %></td>
         <td><%= product.stock_quantity %></td>
         <td><%= product.rating_avg %></td>
         <td><%= product.description %></td>
