--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,6 +10,7 @@
     <%= f.input :stock_quantity %>
     <%= f.input :rating_avg %>
     <%= f.input :description %>
+    <%= f.input :photos, as: :attachinary %>
     <%= f.association :material_id %>
     <%= f.association :category_id %>
   </div>
