--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -50,5 +50,19 @@
   <%= @product.category_id %>
 </p>
 
+<div>
+  <h2>Reviews</h2>
+    <ul>
+        <% @product.reviews.each do |review| %>
+        <li>
+          <h3><%= review.title %></h3>
+          <span><%= review.rating %>/5</span>
+          <p><%= review.content %></p>
+        </li>
+        <% end %>
+    </ul>
+    <%= link_to 'Add a review', new_product_review_path(@product) %>
+</div>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
