--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -3,8 +3,8 @@
  * ------------------------------------- */
 // Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-$base-font: "Roboto Slab", "Helvetica", "sans-serif";
-$header-font: "Roboto", "Helvetica", "sans-serif";
+$base-font: "Open Sans", "Helvetica", "sans-serif";
+$header-font: "Open Sans", "Helvetica", "sans-serif";
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -24,9 +24,9 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: crimson;
 
-$red: #EE5F5B;
+$red: #F6083C;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
