--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,22 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<div class="img-hero">
+    <div class="big-title">
+      <h1>Find real quality art pieces
+      made by professionals.</h1>
+      <h3>Discover unique work, created by originial artists all around the world.</h3>
+    </div>
 
+    <div class="container form-hero">
+      <form class="form-inline">
+        <span class="form-group">
+          <input type="text" class="form-control form-case col-md-3" placeholder="fucking cool poster">
+        </span>
+        <span>
+        <button type="submit" class="btn btn-default btn-hero">LET'S FIND IT!</button>
+        </span>
+      </form>
+    </div>
+
+</div>
 <% @categories.each do |category| %>
-  <%= category.name %>
+<%= category.name %>
 <% end %>
