--- a/app/assets/stylesheets/categories/_index.scss
+++ b/app/assets/stylesheets/categories/_index.scss
@@ -34,7 +34,7 @@ h3 {
 .form-case:focus {
   box-shadow: none;
   border-radius: 0px;
-  border-bottom: 1px solid crimson;
+  border-bottom: 1px solid $brand-color;
   }
 
 .btn-hero {
