--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,6 @@
 <div class="img-hero">
     <div class="big-title">
-      <h1>Find real quality art pieces
-      made by professionals.</h1>
+      <h1>Find real quality art pieces made by professionals.</h1>
       <h3>Discover unique work, created by originial artists all around the world.</h3>
     </div>
 
