--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -12,6 +12,7 @@
     <%= f.input :phone %>
     <%= f.input :siret %>
     <%= f.input :website %>
+    <%= f.input :photo, as: :attachinary %>
   </div>
 
   <div class="form-actions">
