--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<div class="img-hero">
+<div class="row img-hero">
     <div class="big-title">
       <h1>Find real quality art pieces
       made by professionals.</h1>
@@ -8,7 +8,7 @@
     <div class="container form-hero">
       <form class="form-inline">
         <span class="form-group">
-          <input type="text" class="form-control form-case col-md-3" placeholder="fucking cool poster">
+          <input type="text" class="form-control form-case" placeholder="fucking cool poster">
         </span>
         <span>
         <button type="submit" class="btn btn-default btn-hero">LET'S FIND IT!</button>
@@ -17,6 +17,7 @@
     </div>
 
 </div>
+
 <% @categories.each do |category| %>
 <%= category.name %>
 <% end %>
