--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,12 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
-  <body">
+  <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-lg-10 col-lg-offset-1"><%= yield %></div>
-      </div>
-    </div>container">
-      <div class="row">
-        <div class="col-xs-12  col-md-12 "><%= yield %></div>
       </div>
     </div>
     <%= javascript_include_tag 'application' %>
