--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,16 +2,16 @@
   <div class="profile-card">
     <div class="row">
       <div class="col-sm-3">
-        <%= cl_image_tag @artist.photo.path, width: 100, height: 100, crop: :fill %>
+        <%= cl_image_tag @artist.photo.path, width: 200, height: 200, crop: :fill, class: "img-circle img-responsive" %>
         <h2 class="text-center"><%= @artist.username %></h2>
         <h3 class="text-center"><%= @artist.domain.name %></h3>
         <h3 class="text-center"><%= @artist.city %></h3>
       </div>
       <div class="col-sm-7">
         <div class="profile-description">
-          <h2><%= @artist.username %></h2>
+          <h2 class="text-uppercase"><%= @artist.username %></h2>
           <p><%= @artist.description %></p>
-          <h3><%= @artist.website %></h3>
+          <h3 class="text-uppercase"><%= @artist.website %></h3>
         </div>
       </div>
     </div>
@@ -21,16 +21,11 @@
 
 <div class="container">
   <div class="artist-product">
+  <h2 class="text-uppercase"><%= @artist.username %>'s products</h2>
     <div class="row">
-      <h2><%= @artist.username %>'s products</h2>
+      <% @artist.products do |product| %>
       <div class="col-xs-12 col-sm-4">
-        <% @artist.products do |product| %>
-          <% link_to product_path(product) do %>
-            <div>
-              <%= product.name %>
-              <%= product.price %>
-            </div>
-          <% end %>
+        <%= render 'card'%>
         <% end %>
       </div>
     </div>
