--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,16 +2,16 @@
   <div class="profile-card">
     <div class="row">
       <div class="col-sm-3">
-        <%= cl_image_tag @artist.photo.path, width: 200, height: 200, crop: :fill, class: "img-circle img-responsive" %>
-        <h2 class="text-center"><%= @artist.username %></h2>
-        <h3 class="text-center"><%= @artist.domain.name %></h3>
-        <h3 class="text-center"><%= @artist.city %></h3>
+        <%= cl_image_tag @artist.photo.path, width: 200, height: 200, crop: :fill, class: "img-circle img-responsive center-block" %>
+        <h4 class="text-center text-uppercase"><%= @artist.username %></h4>
+        <h5 class="text-center"><%= @artist.domain.name %></h5>
+        <h5 class="text-center text-uppercase"><%= @artist.city %></h5>
       </div>
       <div class="col-sm-7">
         <div class="profile-description">
-          <h2 class="text-uppercase"><%= @artist.username %></h2>
-          <p><%= @artist.description %></p>
-          <h3 class="text-uppercase"><%= @artist.website %></h3>
+          <h3 class="text-uppercase"><%= @artist.username %></h3>
+          <p class="text-justify"><%= @artist.description %></p>
+          <h4 class="text-uppercase"><%= @artist.website %></h4>
         </div>
       </div>
     </div>
@@ -21,13 +21,9 @@
 
 <div class="container">
   <div class="artist-product">
-  <h2 class="text-uppercase"><%= @artist.username %>'s products</h2>
-    <div class="row">
-      <% @artist.products do |product| %>
-      <div class="col-xs-12 col-sm-4">
-        <%= render 'card'%>
-        <% end %>
-      </div>
+  <h4 class="text-uppercase"> <strong><%= @artist.username %>'s products </strong></h4>
+        <% @products = @artist.products %>
+        <%= render 'shared/card_product'%>
     </div>
   </div>
 </div>
