--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,45 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Format</th>
-      <th>Artist</th>
-      <th>Product price</th>
-      <th>Delivery price</th>
-      <th>Stock quantity</th>
-      <th>Rating avg</th>
-      <th>Description</th>
-      <th>Material</th>
-      <th>Category</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.format %></td>
-        <td><%= product.artist_id %></td>
-        <td><%= humanized_money_with_symbol(product.product_price) %></td>
-        <td><%= humanized_money_with_symbol(product.delivery_price) %></td>
-        <td><%= product.stock_quantity %></td>
-        <td><%= product.rating_avg %></td>
-        <td><%= product.description %></td>
-        <td><%= product.material_id %></td>
-        <td><%= product.category_id %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <% if !params[:q].blank? %>
+      <h1><%= params[:q] %> products</h1>
+    <% else %>
+      <h1>Our products</h1>
     <% end %>
-  </tbody>
-</table>
+  </div>
+  <div class="row">
+    <%= render '/shared/card_product' %>
 
-<br>
-
-<%= link_to 'New Product', new_product_path %>
+    <%= link_to 'New Product', new_product_path %>
+  </div>
+</div>
