category-view + modal in render to reuse on the product page + modal design à faire

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,12 +1,19 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
 
-<%= @category.name %>
-<% @category.products.each do |product|%>
-  <%= product.name %>
-  <%= product.description %>
-  <%= product.stock_quantity %>
-  <%= product.product_price %>
-  <%= product.material.name %>
-  <%= product.rating_avg %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-lg-10">
+      <% @products = @category.products %>
+      <h1><%= @category.name %></h1>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-lg-10">
+        <%= render '/shared/card_product' %>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+
+
+
+
