front product-show ongoing

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,6 @@
 @import "profile-card";
 @import "artist-product";
 @import "cards";
+@import "product";
+@import "review-card";
+@import "product-carrousel";
