--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -30,7 +30,7 @@
 
 <% if current_user.artist == @artist %>
 
-<%= link_to 'Edit my profile', artist_path %>
+<%= link_to 'Edit my profile', edit_artist_path %>
 
 <% end %>
 
