--- a/app/assets/stylesheets/categories/_index.scss
+++ b/app/assets/stylesheets/categories/_index.scss
@@ -1,19 +1,26 @@
-.img-hero {
+.big-hero {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hero {
   height: 94vh;
+  h3 {
+    margin-bottom: 1.5em;
+  }
 }
 
 h1 {
   margin: 0px;
   padding: 0px;
-  // font-size: 5.063em;
 }
 
-h3 {
-  // font-size: 2.25em;
+h4 {
+  text-align: center;
+  color: #888;
 }
 
 .big-title {
-  padding: 30% 0px 0px 0px;
+  padding-top: 25vh;
   margin: 0px;
 }
 
@@ -23,15 +30,18 @@ h3 {
 }
 
 .form-case {
-  width: 100%;
+  width: 100% !important;
   border: none;
   border-bottom: 1px solid #E6E6E6;
   box-shadow: none;
-  margin-right: 1em;
+  margin-right: 2em;
+  background: none;
+  color: white;
 }
 
 .form-case:focus {
   box-shadow: none;
+  color: white;
   border-radius: 0px;
   border-bottom: 1px solid $brand-color;
   }
@@ -41,7 +51,8 @@ h3 {
   color: white;
   border: none;
   border-radius: 3px;
-  padding: 15px;
+  padding: 15px 30px 15px 30px;
+  position: relative;
 }
 
 .btn-hero:hover {
@@ -51,41 +62,69 @@ h3 {
   border-radius: 3px;
 }
 
-    // .btn-hero {
-    //   margin-top: 2em;
-    // }
+.categories {
+  background-color: lightgray;
+  height: auto;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  h3 {
+    margin-bottom:1em;
+  }
+  h4 {
+    width: 100%;
+    text-align: center;
+  }
+}
 
-    // .form-case {
-    //   width: 100%;
-    // }
+.category-card {
+  background-color: white;
+  height: 300px;
+  border-radius: 3px;
+  border: solid;
+  border-width: 1px;
+  border-color: #ccc;
+  box-shadow: 5px 5px 30px -9px rgba(0,0,0,0.5);
+  margin-bottom: 2em;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
 
-// html {font-size: 1em;}
+.category-card:hover {
+  box-shadow: 5px 5px 20px -9px rgba(0,0,0,0.5);
+}
 
-// body {
-//   background-color: white;
-//   font-family: 'Libre Baskerville', serif;
-//   font-weight: 400;
-//   line-height: 1.45;
-//   color: #333;
-// }
+.card {
+  justify-content: middle;
+}
 
-// p {margin-bottom: 1.3em;}
+video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  transform: translateX(-50%) translateY(-50%);
+  background: url(images/eddie-video-capture.png) no-repeat;
+  background-size: cover;
+  transition: 1s opacity;
+}
+.stopfade {
+   opacity: .5;
+}
 
-// h1, h2, h3, h4 {
-//   margin: 1.414em 0 0.5em;
-//   font-weight: inherit;
-//   line-height: 1.2;
-// }
+@media only screen and (max-width : 768px) {
+  .hero {margin: 0px 1em 0px 1em;}
+  #bgvid {background-image:url(images/eddie-video-capture.png);}
 
-// h1 {
-//   margin-top: 0;
-//   font-size: 5.063em;
-// }
+/* Styles */
+}
 
-// h2 {font-size: 3.375em;}
-
-// h3 {font-size: 2.25em;}
-
-// h4 {font-size: 1.5em;}
-
-// small, .font_small {font-size: 0.667em;}
+/* iPads (portrait) ----------- */
+@media only screen and (min-width : 768px) and (max-width : 1020px){
+/* Styles */
+  .hero {margin: 0px 2em 0px 2em;}
+}
