--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -100,6 +100,10 @@
   margin-right: 30px;
 }
 
+.navbar-wagon-search-input:focus {
+  border-bottom: 1px solid $brand-color;
+}
+
 /* Navbar dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
