--- a/app/assets/stylesheets/layout/_responsive.scss
+++ b/app/assets/stylesheets/layout/_responsive.scss
@@ -1,5 +1,7 @@
 // /* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
+@media only screen and (max-width : 768px) {
+  h1, h2, h3, h4, h5 {text-align: left;}
+
     h1 {font-size: 2.25em;}
 
     h2 {font-size: 1.5em;}
@@ -18,6 +20,8 @@
 /* iPads (portrait) ----------- */
 @media only screen and (min-width : 768px) and (max-width : 1020px){
 /* Styles */
+  h1, h2, h3, h4, h5 {text-align: left;}
+
     h1 {font-size: 3.375em;}
 
     h2 {font-size: 2.25em;}
@@ -33,6 +37,9 @@
 
 @media only screen and (min-width : 1020px){
 /* Styles */
+
+  h1, h2, h3, h4, h5 {text-align: left;}
+
     h1 {font-size: 5.063em;}
 
     h2 {font-size: 3.375em;}
