--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,23 +1,78 @@
-<div class="row img-hero">
-    <div class="big-title">
-      <h1>Find real quality art pieces
-      made by professionals.</h1>
-      <h3>Discover unique work, created by originial artists all around the world.</h3>
+<div class="big-hero">
+  <div class="container">
+    <div class="row hero">
+      <div class="big-title col-xs-12 col-sm-12 col-md-12 col-lg-offset-1">
+        <video poster="<%= image_path("eddie-video-capture.png") %>" id="bgvid" playsinline autoplay muted loop>
+          <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
+          <source src="<%= image_path("eddie-video.mp4") %>" type="video/mp4">
+        </video>
+        <h1 style="color: white;"> Find real quality art pieces made by professionals.</h1>
+        <h3 style="color: white;"> Discover unique work, created by originial artists all around the world.</h3>
+      </div>
+      <div class="form-hero">
+        <div class="form-group col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <form class="form-inline">
+            <input type="text" class="form-control form-case" placeholder="fucking cool poster">
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
+            <button type="submit" class="btn btn-default btn-hero">LET'S FIND IT!</button>
+          </div>
+        </form>
+      </div>
     </div>
-
-    <div class="container form-hero">
-      <form class="form-inline">
-        <span class="form-group">
-          <input type="text" class="form-control form-case" placeholder="fucking cool poster">
-        </span>
-        <span>
-        <button type="submit" class="btn btn-default btn-hero">LET'S FIND IT!</button>
-        </span>
-      </form>
+  </div>
+</div>
+<div class="categories">
+  <div class="container text-center">
+    <% @categories.each do |category| %>
+    <%= category.name %>
+    <% end %>
+    <h3>TITRE</h3>
+    <div class="category-cards">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>PHOTO</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>PEINTURE</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>AFFICHE</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>ART DECORATIF</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>MOBILIER</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>SERIGRAPHIE</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>CERAMIQUE</h4>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="category-card">
+          <h4>LIVRE</h4>
+        </div>
+      </div>
     </div>
-
+  </div>
 </div>
 
-<% @categories.each do |category| %>
-<%= category.name %>
-<% end %>
+<div class="month-selection">
+  <%= render "/shared/card_product" %>
+</div>
