front product continue

--- a/app/views/shared/_review-card.html.erb
+++ b/app/views/shared/_review-card.html.erb
@@ -1,12 +1,15 @@
 <div class="review-card">
     <% @product.reviews.each do |review| %>
         <div class="review-content">
-          <i class="fa fa-star" aria-hidden="true">
-            <%= review.rating %>
-          </i>
+            <% review.rating.times do %>
+              <i class="fa fa-star" aria-hidden="true"></i>
+            <% end %>
+            <% (5 - review.rating).times do %>
+              <i class="fa fa-star" aria-hidden="true" style="color: rgba(0,0,0,0.2)"></i>
+            <% end %>
           <h4><%= review.title %></h4>
           <p><%= review.content %></p>
         </div>
     <% end %>
-    <%= link_to '. . .', new_product_review_path(@product), class: 'btn btn-default btn-review center-block' %>
+    <%= link_to '. . .', new_product_review_path(@product), class: 'btn btn-review center-block' %>
 </div>
