--- a/app/assets/stylesheets/components/_review-card.scss
+++ b/app/assets/stylesheets/components/_review-card.scss
@@ -1,5 +1,5 @@
 .review {
-  padding: 3em;
+  padding: 0 3em 3em 3em;
 }
 
 .review-card {
@@ -34,6 +34,7 @@
   color: $gray;
   border: none;
   border-radius: 3px;
+  margin: 1px;
 }
 
 .btn-review:hover {
