--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,11 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
-
-
 <div class="container">
   <div class="product">
     <div class="row">
@@ -15,6 +9,7 @@
       <div class="col-sm-5">
         <div class="product-description">
           <h3 class="text-uppercase"><%= @product.name %></h3>
+          <h4 class="text-uppercase"><%= link_to @product.artist.username, artist_path(@product.artist)%></h4>
           <p class="text-justify"><%= @product.description %></p>
           <h4 class="text-uppercase"> Size : <%= @product.format %></h4>
           <h4 class="text-uppercase"> Materials : <%= @product.material.name %></h4>
@@ -30,22 +25,19 @@
 <div class="container">
   <div class="review">
     <div class="row">
-      <div class="col-xs-12 col-md-5 col-md-offset-1">
+      <div class="col-xs-10 col-md-offset-1">
         <% if @product.reviews != nil %>
           <%= render 'shared/review-card' %>
         <% end %>
-      </div>
-      <div class="col-sm-5">
-
       </div>
     </div>
   </div>
 </div>
 
 
-
-<%= link_to 'Back', products_path %>
-
-<%= link_to 'Edit my product', edit_product_path %>
-
-
+<div class="text-center">
+  <%= link_to 'Back', products_path, class: "btn btn-default" %>
+  <% if current_user && current_user.artist == product.artist %>
+    <%= link_to 'Edit my product', edit_product_path, class: "btn btn-default" %>
+  <% end %>
+</div>
