--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -30,7 +30,7 @@
   </div>
 </div>
 
-<% if current_user.artist == @artist %>
+<% if current_user && current_user.artist == @artist %>
 
 <%= link_to 'Edit my profile', edit_artist_path %>
 
