--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="container">
   <div class="product">
     <div class="row">
@@ -36,8 +34,7 @@
 
 
 <div class="text-center">
-  <%= link_to 'Back', products_path, class: "btn btn-default" %>
-  <% if current_user && current_user.artist == product.artist %>
+  <% if current_user && current_user.artist == @product.artist %>
     <%= link_to 'Edit my product', edit_product_path, class: "btn btn-default" %>
   <% end %>
 </div>
