--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,8 +11,8 @@
       </div>
       <div class="form-hero">
         <div class="form-group col-xs-12 col-sm-6 col-md-4 col-lg-4">
-          <form class="form-inline">
-            <input type="text" class="form-control form-case" placeholder="fucking cool poster">
+          <form class="form-inline" action="<%= products_path %>">
+            <input type="text" name="q" class="form-control form-case" placeholder="fucking cool poster">
           </div>
           <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
             <button type="submit" class="btn btn-default btn-hero">LET'S FIND IT!</button>
