--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,8 @@
           <h4 class="text-uppercase"> Materials : <%= @product.material.name %></h4>
           <h4 class="text-uppercase"> Price : <%= humanized_money_with_symbol(@product.product_price) %></h4>
           <h4 class="text-uppercase"> Delivery price : <%= humanized_money_with_symbol(@product.delivery_price) %></h4>
-          <button type="submit" class="btn btn-default btn-hero">Add to cart</button>
+
+          <button type="submit" data-toggle="modal" data-target="#addToCart" class="btn btn-default btn-hero">Add to cart</button>
         </div>
       </div>
     </div>
@@ -38,3 +39,5 @@
     <%= link_to 'Edit my product', edit_product_path, class: "btn btn-default" %>
   <% end %>
 </div>
+
+<%= render '/shared/add_to_cart_modal' %>
