--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,17 +31,17 @@
         <% end %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <% if current_user.artist %>
-            <li>
-              <%= link_to artist_path(current_user.artist) do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
+              <li>
+                <%= link_to artist_path(current_user.artist) do %>
+                  <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+                <% end %>
+              </li>
+                <li>
+                  <%= link_to new_product_path do %>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i><%= t(".addaproduct", default: " Add a product") %>
+                  <% end %>
+                </li>
             <% end %>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
-              <% end %>
-            </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
                 <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
