--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,21 +1,32 @@
 <%= simple_form_for(@artist) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :username %>
-    <%= f.input :description %>
-    <%= f.input :domain_id, collection: Domain.all, :required => true %>
-    <%= f.input :street %>
-    <%= f.input :zipcode %>
-    <%= f.input :city %>
-    <%= f.input :country, as: :string, input_html: {value: f.object.country || 'France'} %>
-    <%= f.input :phone %>
-    <%= f.input :siret %>
-    <%= f.input :website %>
-    <%= f.input :photo, as: :attachinary %>
+<%= f.error_notification %>
+<div class="form-inputs">
+  <div class="form_container">
+    <div class="row">
+      <div class="col-xs-6">
+        <div class="form_photo_card">
+          <%= f.input :photo, as: :attachinary %>
+        </div>
+      </div>
+    <div class="col-xs-6">
+      <div class="form_card">
+        <div class="form-actions">
+        <h3 class="text-uppercase"> <strong>My Artist Profil:</strong></h3><br>
+        <%= f.input :username %>
+        <%= f.input :description %>
+        <%= f.input :domain_id, collection: Domain.all, :required => true %>
+        <%= f.input :street %>
+        <%= f.input :zipcode %>
+        <%= f.input :city %>
+        <%= f.input :country, as: :string, input_html: {value: f.object.country || 'France'} %>
+        <%= f.input :phone %>
+        <%= f.input :siret %>
+        <%= f.input :website %>
+        <%= f.button :submit %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+</div>
+</div>
 <% end %>
