--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -26,7 +26,7 @@ $base-height: 1.4;
 // Scheme
 $brand-color: crimson;
 
-$red: #F6083C;
+$red: #FB0D49;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
