--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,20 @@
-// Your footer style
+.pied {
+  width: 100%;
+  background-color: gray;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
+}
+
+.space {
+  margin-bottom: 1em;
+}
+
+@media only screen and (max-width : 768px) {
+.pied {
+  text-align: center;
+  h5 {text-align: center;
+  }
+}
+
+/* Styles */
+}
