--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -22,57 +22,82 @@
     </div>
   </div>
 </div>
+
+
 <div class="categories">
-  <div class="container text-center">
-    <% @categories.each do |category| %>
-    <%= category.name %>
-    <% end %>
-    <h3>TITRE</h3>
-    <div class="category-cards">
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>PHOTO</h4>
+<div class="container">
+<!-- <div class="text-center">
+  <% @categories.each do |category| %>
+  <%= category.name %>
+  <% end %>
+</div> -->
+    <div >
+      <h3>CATEGORIES</h3>
+      <div class="category-cards">
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+            <div class="img-card photo-card">
+              <h4><strong>PHOTO</strong></h4>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>PEINTURE</h4>
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+          <div class="img-card peinture-card">
+              <h4><strong>PEINTURE</strong></h4>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>AFFICHE</h4>
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+            <div class="img-card affiche-card">
+              <h4><strong>AFFICHE</strong></h4>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>ART DECORATIF</h4>
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+            <div class="img-card art-decoratif-card">
+              <h4><strong>ART DECORATIF</strong></h4>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>MOBILIER</h4>
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+            <div class="img-card mobilier-card">
+              <h4><strong>MOBILIER</strong></h4>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>SERIGRAPHIE</h4>
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+            <div class="img-card serigraphie-card">
+              <h4><strong>SERIGRAPHIE</strong></h4>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>CERAMIQUE</h4>
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+            <div class="img-card ceramique-card">
+              <h4><strong>CERAMIQUE</strong></h4>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="category-card">
-          <h4>LIVRE</h4>
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+          <div class="category-card">
+            <div class="img-card livre-card">
+              <h4><strong>LIVRE</strong></h4>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+</div>
 </div>
 
 <div class="month-selection">
+<div class="container">
+  <h3>LAST PRODUCTS</h3>
+  </div>
   <%= render "/shared/card_product" %>
 </div>
