--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -3,6 +3,11 @@
   background-color: gray;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
+  // position: absolute;
+  left: 0px;
+  bottom: 0px;
+  z-index: 1;
+  width: 100%;
 }
 
 .space {
@@ -15,6 +20,5 @@
   h5 {text-align: center;
   }
 }
-
 /* Styles */
 }
