--- a/app/assets/stylesheets/components/_review-card.scss
+++ b/app/assets/stylesheets/components/_review-card.scss
@@ -11,7 +11,6 @@
   filter:progid:DXImageTransform.Microsoft.Shadow(color=#DCDCDC, Direction=134, Strength=2);
   height: auto;
   width: auto;
-  padding: 0px 25px;
 }
 
 .review-content {
@@ -21,7 +20,7 @@
   box-shadow: 0px 2px 0px 0px #DCDCDC;
   filter:progid:DXImageTransform.Microsoft.Shadow(color=#DCDCDC, Direction=180, Strength=0);
   position: relative;
-  padding-top: 15px;
+  padding: 15px;
 }
 
 .review-content > p {
@@ -35,6 +34,7 @@
   border: none;
   border-radius: 3px;
   margin: 1px;
+
 }
 
 .btn-review:hover {
