--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,13 +7,18 @@
       <div class="col-sm-5">
         <div class="product-description">
           <h3 class="text-uppercase"><%= @product.name %></h3>
-          <h4 class="text-uppercase"><%= link_to @product.artist.username, artist_path(@product.artist)%></h4>
-          <p class="text-justify"><%= @product.description %></p>
-          <h4 class="text-uppercase"> Size : <%= @product.format %></h4>
-          <h4 class="text-uppercase"> Materials : <%= @product.material.name %></h4>
-          <h4 class="text-uppercase"> Price : <%= humanized_money_with_symbol(@product.product_price) %></h4>
-          <h4 class="text-uppercase"> Delivery price : <%= humanized_money_with_symbol(@product.delivery_price) %></h4>
-
+          <p><% if current_user && current_user.artist == @product.artist %>
+            <%= link_to (raw("<i class='fa fa-pencil-square-o' aria-hidden='true'></i>")), edit_product_path(@product), class: "text-" %>
+            <%= link_to (raw("<i class='fa fa-trash-o' aria-hidden='true'></i>")), product_path(@product) %>
+          <% end %></p>
+          <ul class="list-unstyled">
+            <li class="text-uppercase"><%= link_to @product.artist.username, artist_path(@product.artist)%></li>
+            <li class="text-justify"><%= @product.description %></li>
+            <li class="text-uppercase"> Size : <%= @product.format %></li>
+            <li class="text-uppercase"> Materials : <%= @product.material.name %></li>
+            <li class="text-uppercase"> Price : <%= humanized_money_with_symbol(@product.product_price) %></li>
+            <li class="text-uppercase"> Delivery price : <%= humanized_money_with_symbol(@product.delivery_price) %></li>
+          </ul>
           <button type="submit" data-toggle="modal" data-target="#addToCart" class="btn btn-default btn-hero">Add to cart</button>
         </div>
       </div>
@@ -31,13 +36,6 @@
       </div>
     </div>
   </div>
-</div>
-
-
-<div class="text-center">
-  <% if current_user && current_user.artist == @product.artist %>
-    <%= link_to 'Edit my product', edit_product_path, class: "btn btn-default" %>
-  <% end %>
 </div>
 
 <%= render '/shared/add_to_cart_modal' %>
