--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -3,7 +3,7 @@
   background-color: gray;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
-  // position: absolute;
+  position: absolute;
   left: 0px;
   bottom: 0px;
   z-index: 1;
