--- a/app/assets/stylesheets/categories/_index.scss
+++ b/app/assets/stylesheets/categories/_index.scss
@@ -1,9 +1,13 @@
 .big-hero {
   background-color: rgba(0, 0, 0, 0.5);
+  // display: flex;
+  // align-items: center;
 }
 
 .hero {
   height: 100vh;
+  display: flex;
+  align-items: center;
   h3 {
     margin-bottom: 1.5em;
   }
@@ -18,9 +22,11 @@ h4 {
   color: #888;
 }
 
-.big-title {
-  padding-top: 35vh;
-  margin: 0px;
+.poster {
+  vertical-align: middle;
+  width: 100%;
+  // padding-top: 35vh;
+  // margin: 0px;
 }
 
 .form-hero {
