--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,8 +1,11 @@
 .pied {
   width: 100%;
-  background-color: gray;
+  background-color: #222;
   padding-top: 1.5em;
   padding-bottom: 1.5em;
+  color: white;
+  position: absolute;
+  bottom: 0;
 }
 
 .space {
