--- a/app/views/shared/_add_to_cart_modal.html.erb
+++ b/app/views/shared/_add_to_cart_modal.html.erb
@@ -2,17 +2,44 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="exampleModalLabel">Merci :)</h4>
+        <h4 class="modal-title" id="exampleModalLabel">Votre panier</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body text-center">
-        Votre article a bien été ajouté au panier.
+        <% if @product && current_page?(product_path(@product)) %>
+            <table style="width: 100%">
+              <thead>
+                <td></td>
+                <td style="text-align: left;">Produit</td>
+                <td>Qté</td>
+                <td>Prix</td>
+              </thead>
+                  <tr>
+                    <td><%= cl_image_tag @product.photos.first.path, width: 80, height: 80, crop: :fill %></td>
+                    <td style="text-align: left;"><%= @product.name %></td>
+                    <td>1</td>
+                    <td><%= @product.product_price %> €</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align: right;">Livraison :</td>
+                    <td> <%= @product.delivery_price %> €</td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" style="text-align: right;">Total :</td>
+                    <td> <%= @product.product_price + @product.delivery_price %> €</td>
+                  </tr>
+                </td>
+            </table>
+
+        <% else %>
+          Votre article a bien été ajouté au panier.
+        <% end %>
       </div>
       <div class="modal-footer text-center">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Continuer mes achats</button>
-        <button type="button" class="btn btn-primary">Payer !</button>
+        <button type="button" class="btn btn-primary" style="background-color: crimson; border-color: crimson ">Payer !</button>
       </div>
     </div>
   </div>
