--- a/app/views/shared/_card_product.html.erb
+++ b/app/views/shared/_card_product.html.erb
@@ -9,6 +9,13 @@
                 <%= cl_image_tag product.photos.first.path, width: 300, height: 300, crop: :fill %>
                 <% end %>
             <% end %>
+             <% if current_user && current_user.artist == product.artist %>
+            <%= link_to(raw("<i class='fa fa-pencil-square-o' aria-hidden='true'></i>"), edit_product_path(product)) %>
+
+            <%= link_to(raw("<i class='fa fa-trash-o' aria-hidden='true'></i>"), product, method: :delete, data: { confirm: 'Are you sure?' }) %>
+
+
+          <% end %>
           </div>
 
           <div class="footer-card">
@@ -21,10 +28,7 @@
             <a href="#addToCart" data-toggle="modal"><span class="card-basket"><i class="fa fa-shopping-basket" aria-hidden="true"></i></span></a>
           </div>
 
-          <% if current_user && current_user.artist == product.artist %>
-            <%= link_to 'Edit', edit_product_path(product) %>
-            <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-          <% end %>
+
         </div>
       </div>
     <% end %>
