--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row hero">
       <div class="big-title col-xs-12 col-sm-12 col-md-12 col-lg-offset-1">
-        <video poster="<%= image_path("eddie-video-capture.png") %>" id="bgvid" playsinline autoplay muted loop>
+        <video id="bgvid" playsinline autoplay muted loop>
           <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
           <source src="<%= image_path("eddie-video.mp4") %>" type="video/mp4">
         </video>
