--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-xs-12 col-lg-10">
       <% @products = @category.products %>
-      <h1><%= @category.name %></h1>
+      <h4><%= @category.name.upcase %></h4>
     </div>
     <div class="row">
       <div class="col-xs-12 col-lg-10">
