product new done

--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -22,7 +22,7 @@
         <%= f.input :phone %>
         <%= f.input :siret %>
         <%= f.input :website %>
-        <%= f.button :submit %>
+        <%= f.button :submit, :class => "btn-hero"%>
         </div>
       </div>
     </div>
@@ -30,3 +30,4 @@
 </div>
 </div>
 <% end %>
+
