--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -78,11 +78,13 @@
           </div>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+         <%= link_to category_path(1) do %>
           <div class="category-card">
             <div class="img-card serigraphie-card">
               <h4><strong>SERIGRAPHIE</strong></h4>
             </div>
           </div>
+        <% end %>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
           <div class="category-card">
